@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with the pusher and attractor something crashing client-side
+
 1.20-6.0.0:
 - Port to 1.20
 
